# gio-sharp

./: Makefile.am  README.md  configure.ac
sources/: Makefile.am  gio-sharp-api.raw  gio-sharp.metadata  gio-sharp.snk
sources/custom/: FileEnumerator.cs
sources/glue/: Makefile.am
